# generate

./: cargo-generate.toml
esp32/: Cargo.toml  cargo-generate.toml
esp32/src/: main.rs
godot/: .gitignore  cargo-generate.toml  project.godot
godot/rust/: Cargo.toml  build.rs
godot/rust/src/: lib.rs
leetcode/: Cargo.toml  pre-script.rhai
leetcode/src/: lib.rs
nvim-oxi/: Cargo.toml  build.rs
nvim-oxi/src/: lib.rs
pico2w/: .gitignore  Cargo.toml  memory.x  pre.rhai
pico2w/.cargo/: config.toml
pico2w/src/: wifi.rs
pico2w/src/main/: async.rs  sync.rs
rp2350/: Cargo.toml  build.rs  cargo-generate.toml  pre.rhai
rp235x/: Cargo.toml  build.rs  cargo-generate.toml  pre.rhai  rust-toolchain.toml
wgpu/: Cargo.toml
wgpu/src/: lib.rs  main.rs  shader.wgsl
wgpu/web/: index.html  index.js  package.json
