[package]
name = "{{project-name}}"
version = "0.0.0"
authors = ["{{authors}}"]
edition = "2024"

[[bin]]
{% if lib != "both" %}name = "main"
path = "src/main.rs"
{% else %}name = "sync"
harness = false

[[bin]]
# Name cannot be `async` because it gets used as an `ident`.
name = "Async"
path = "src/bin/async.rs"
harness = false

[lib]
{% endif %}harness = false

[dependencies]
{% if arch == "arm" and lib != "sync" %}cortex-m-rt = "0.7.5"
{% endif %}defmt = "1.0.1"
defmt-rtt = "1.0.0"
{% if arch == "risc" %}panic-halt = "1.0.0"
{% endif %}{% if wifi %}static_cell = "2.1.0"
{% endif %}{% if arch == "both" and lib != "sync" %}
[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m-rt = "0.7.5"
{% endif %}{% if arch == "both" %}
[target.'cfg(target_arch = "riscv32")'.dependencies]
panic-halt = "1.0.0"
{% endif %}{% if wifi %}
[dependencies.cyw43]
features = ["defmt", "firmware-logs"]
version = "0.3.0"

[dependencies.cyw43-pio]
features = ["defmt"]
version = "0.4.0"
{% endif %}{% if lib != async %}
[dependencies.embedded-hal]
features = ["defmt-03"]
version = "1.0.0"
{% endif %}{% if arch == "arm" and lib != "sync" %}
[dependencies.embassy-executor]
features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread",
    "executor-interrupt",
    "task-arena-size-98304",
]
version = "0.7.0"
{% endif %}{% if wifi %}
[dependencies.embassy-net]
features = ["defmt", "dhcpv4", "dns", "proto-ipv4", "tcp"]
version = "0.6.0"
{% endif %}{%if lib != "sync" %}
[dependencies.embassy-rp]
features = ["binary-info", "critical-section-impl", "defmt", "rp235xa", "time-driver"]
version = "0.4.0"

[dependencies.embassy-time]
features = ["defmt", "defmt-timestamp-uptime"]
version = "0.4.0"
{% endif %}{% if arch == "arm" %}
[dependencies.panic-probe]
{% elsif arch == "both" %}
[target.'cfg(target_arch = "arm")'.dependencies.panic-probe]
{% endif %}{% if arch != "risc" %}features = ["print-defmt"]
version = "1.0.0"
{% endif %}{% if lib != "async" %}
[dependencies.rp235x-hal]
features = [
    "binary-info",
    "critical-section-impl",
    "defmt",
]
version = "0.3.0"
{% endif %}
[build-dependencies]
glob = "0.3.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[profile.dev]
lto = true
opt-level = "z"
