[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
log = "0.4.32"
wgpu = "29.0.3"
winit = "0.30.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.10"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.futures]
features = ["thread-pool"]
version = "0.3.32"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.futures-time]
version = "3.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"
[target.'cfg(target_arch = "wasm32")'.dependencies.console_log]
features = ["color"]
version = "1.0.0"
[target.'cfg(target_arch = "wasm32")'.dependencies.futures]
default-features = false
features = ["async-await", "std"]
version = "0.3.32"
[target.'cfg(target_arch = "wasm32")'.dependencies.futures-time]
default-features = false
features = ["web"]
version = "3.1.0"
